Bank Account Manager API: create GET, POST endpoints and business logic for transfers; error handling implementation for transfers; small adjustments in controller classes;